--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-testing-library": "^6.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-location": "~12.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
