--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@testing-library/react-native": "^7.2.0",
     "expo": "~42.0.1",
+    "expo-location": "~12.1.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -20,8 +22,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-testing-library": "^6.0.0",
-    "react-native-web": "~0.13.12",
-    "expo-location": "~12.1.3"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
